# twitchcap

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  style.qss  tcconnection.cpp  tcconnection.h  tcinfodialog.cpp  tcinfodialog.h  tcmainwindow.cpp  tcmainwindow.h  tcsettings.cpp  tcsettings.h  twitchcap.cpp
src/resources/: twitchcap.qrc  twitchcap.qss
